--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.9
   http: ^0.13.5
+  dio: ^4.0.6
+  image_picker: any
+  image_cropper: ^3.0.1
+  cached_network_image: ^3.2.0
+  country_picker: ^2.0.19
 
 dev_dependencies:
   build_runner: 2.3.2
