--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   image_cropper: ^3.0.1
   cached_network_image: ^3.2.0
   country_picker: ^2.0.19
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   build_runner: 2.3.2
@@ -80,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
